--- a/ask/qa/templates/qa/question_details.html
+++ b/ask/qa/templates/qa/question_details.html
@@ -6,12 +6,12 @@
 
 {% block content %}
     <div class="question">
-        <h1>{{ question }}</h1>
+        <h1>{{ question.title }}</h1>
         <p>{{ question.text }}</p>
     </div>
     {% for answer in question.answer_set %}
         <div class="answer">
-            <p>{{ answer }}</p>
+            <p>{{ answer.text }}</p>
         </div>
     {% endfor %}
 {% endblock %}
