--- a/ask/qa/templates/qa/question_details.html
+++ b/ask/qa/templates/qa/question_details.html
@@ -13,7 +13,7 @@
     {% for answer in question.answer_set.all %}
         <li>
             <h2>{{ answer.author }}</h2>
-            <p>{{ answer }}</p>
+            <p>{{ answer.text }}</p>
         </li>
     {% endfor %}
     </ul>
