--- a/ask/qa/templates/qa/form.html
+++ b/ask/qa/templates/qa/form.html
@@ -1,13 +1,13 @@
 {% for e in form.non_field_errors %}
-<div class="alert alert-danger">{{ e }}</div>
+    <div class="alert alert-danger">{{ e }}</div>
 {% endfor %}
 <form action="/ask/" method="post" class="form-horizontal">
     <fieldset>
         {% for field in form %}
-        <div class="control-group {% if field.errors %}has-errors{% endif %}">
-            <label class="control-label">{{ field.label }}</label>
-            <div class="control">{{ label }}</div>
-        </div>
+            <div class="control-group {% if field.errors %}has-errors{% endif %}">
+                <label class="control-label">{{ field.label }}</label>
+                <div class="control">{{ field }}</div>
+            </div>
         {% endfor %}
     </fieldset>
     <div class="form-actions">
