--- a/ask/qa/templates/qa/ask.html
+++ b/ask/qa/templates/qa/ask.html
@@ -1,7 +1,7 @@
 {% extends "qa/base.html" %}
 
 {% block title %}
-    {{ block.super }} – {{ ask a question }}
+    {{ block.super }} – ask a question
 {% endblock %}
 
 
